--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-/* importing google fonts */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Merriweather', serif;;
 }
 body{
     height: 100vh;
@@ -24,26 +24,9 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 30px;
+    padding: 20px;
     position: absolute;
-    display: none;
 }
-/*
-::selection{
-    color: #fff;
-    background: #007bff;
-}
-.start_btn,
-.info_box,
-.quiz_box,
-.result_box{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 
-                0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}*/
 .block{
     display: flex;
     flex-direction: row;
@@ -54,9 +37,7 @@ body{
 .block1,
 .block2{
     min-width: 200px;
-    color: #e77bd5;
-    font-weight: 600;
-    font-family: cursive;
+    color: #df5a8d;
     margin: 10pX;
     padding: 80px 20px 20px 20px;
     background: rgba(255,255,255,0.2);
@@ -82,8 +63,8 @@ body{
     box-shadow: 0 15px 35px rgba(255,255,255,0.05);
     border-radius: 30px;
     backdrop-filter: blur(10px);
-    border: 1px solid rgba(255,255,255,0.5);
-    color: #e77bd5;
+    border: 1px solid #df5a8d;
+    color: #df5a8d;
     font-size: 1.5rem;
     font-weight: 600;
     letter-spacing: 1px;
@@ -92,7 +73,8 @@ body{
     transform: translateY(-30px);
 }
 .start_btn button:hover{
-    background: rgba(255,255,255,0.6);
+    background: #df5a8d;
+    color: #fff;
 }
 .info_box{
     background: rgba(255,255,255,0.5);
@@ -102,7 +84,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 50px;
+    padding: 50px 20px;
     transition: all 0.3s ease;
     position: absolute;
     display: none;
@@ -161,16 +143,21 @@ body{
     transition: all 0.3s ease;
     transform: translate(150px, 30px);
 }
-/*
-.info_box.activeInfo,
-.quiz_box.activeQuiz,
-.result_box.activeResult{
-    opacity: 1;
-    z-index: 5;
-    pointer-events: auto;
-    transform: translate(-50%, -50%) scale(1);
-}*/
-
+.info_box .buttons button.restart{
+    color: #fff;
+    background: #ac4253;
+}
+.info_box .buttons button.restart:hover{
+    background: #8a2435;
+}
+.info_box .buttons button.quit{
+    color: #8a2435;
+    background: #fff;
+}
+.info_box .buttons button.quit:hover{
+    color: #fff;
+    background: #8a2435;
+}
 .quiz_box{
     height: 470px;
     width: 600px;
@@ -204,7 +191,6 @@ body{
     font-weight: 600;
     color: #8a2435;
 }
-
 .quiz_box header .timer{
     width: 150px;
     color: #8a2435;
@@ -219,8 +205,8 @@ body{
     border-radius: 10px;  
 }
 .quiz_box header .timer .time_text{
-    font-weight: 500;
-    font-size: 18px;
+    font-weight: bold;
+    font-size: 15px;
     user-select: none;
 }
 .quiz_box header .timer .timer_sec{
@@ -236,12 +222,14 @@ body{
     user-select: none;
 }
 .quiz_box header .time_line{
-    position: absolute;
     height: 3px;
-    background: #007bff;
+    position: absolute;
+    border-radius: 10px;
+    transform: translate(-30px, 35px);
+    background: #8a2435;
 }
 section{
-    padding: 20px 20px 15px 30px;
+    padding: 20px 20px 10px 30px;
     box-shadow: 0 15px 30px rgba(255,255,255,0.1);
     border-radius: 20px;
     color: #8a2435;
@@ -305,8 +293,6 @@ section .option_list .option .icon{
     border-radius: 50%;
     text-align: center;
     font-size: 15px;
-    pointer-events: none;
-    transition: all 0.3s ease;
     line-height: 25px;
 }
 .option_list .option .icon.tick{
@@ -355,9 +341,10 @@ footer button{
     box-shadow: 0 5px 10px rgba(255,255,255,0.05);
     cursor: pointer;
     position: absolute;
-    transform: translateX(350px);
-    transition: all 0.3s ease;
+    transform: translateX(400px);
+    opacity: 0;
     pointer-events: none;
+    transition: all 0.3s ease;
 }
 footer button:hover{
     opacity: 0.5;
@@ -365,81 +352,68 @@ footer button:hover{
 footer button.show{
     opacity: 1;
     pointer-events: auto;
-    transform: scale(1);
 }
-
 .result_box{
-    background: #fff;
-    border-radius: 5px;
+    background: rgba(255,255,255,0.5);
+    box-shadow: 0 15px 35px rgba(255,255,255,0.05);
+    border-radius: 20px;
     display: flex;
-    padding: 25px 30px;
-    width: 450px;
-    align-items: center;
     flex-direction: column;
-    justify-content: center;
-    transform: translate(-50%, -50%) scale(0.9);
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.3s ease;
+    text-align: center;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px;
+    display: none;
 }
-
 .result_box .icon{
     font-size: 100px;
-    color: #007bff;
+    color: palevioletred;
     margin-bottom: 10px;
 }
-
-.result_box .complete_text{
-    font-size: 20px;
+.result_box .text{
+    font-size: 30px;
     font-weight: 500;
+    color: #df5a8d;
 }
-
 .result_box .score_text span{
     display: flex;
     margin: 10px 0;
-    font-size: 18px;
+    font-size: 28px;
     font-weight: 500;
+    color: #df5a8d;
 }
-
 .result_box .score_text span p{
-    padding: 0 4px;
+    padding: 0 5px;
     font-weight: 600;
 }
-
 .result_box .buttons{
     display: flex;
     margin: 20px 0;
 }
-
 .result_box .buttons button{
     margin: 0 10px;
     height: 45px;
     padding: 0 20px;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 500;
     cursor: pointer;
     border: none;
     outline: none;
-    border-radius: 5px;
-    border: 1px solid #007bff;
-    transition: all 0.3s ease;
+    border-radius: 20px;
+    border: 1px solid #df5a8d;
 }
-
-.buttons button.restart{
+.result_box .buttons button.quit{
     color: #fff;
-    background: #ac4253;;
+    background: #df5a8d;
 }
-
-.buttons button.restart:hover{
-    background: #8a2435;;
+.result_box .buttons button.quit:hover{
+    background: #df5a8d;
 }
-
-.buttons button.quit{
-    color: #8a2435;;
+.result_box .buttons button.restart{
+    color: #df5a8d;
     background: #fff;
 }
-
-.buttons button.quit:hover{
+.result_box .buttons button.restart:hover{
     color: #fff;
-    background: #8a2435;;
+    background: #df5a8d;
 }
